Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,9 @@ stages:
           packagesToPack: '**/*.csproj'
           nobuild: true
           versioningScheme: 'byBuildNumber'
+      - task: PublishPipelineArtifact@1
+        inputs:
+          targetPath: '$(Pipeline.Workspace)'
 - stage: Publish
   displayName: 'Publish Nuget Packages'
   dependsOn: Build
