--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,8 @@ stages:
   - job: 'build_projects'
     pool:
       vmImage: 'windows-2019'
+    variables:
+      BUILD_BUILDNUMBER: $(Build.BuildNumber)
     steps:
       - task: DotNetCoreCLI@2
         inputs:
