--- a/src/Microsoft.Actions.Actors/nuspec/Microsoft.Actions.Actors.nuspec
+++ b/src/Microsoft.Actions.Actors/nuspec/Microsoft.Actions.Actors.nuspec
@@ -19,7 +19,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\bin\$Configuration$\Microsoft.Actions.Actors.dll" target="lib\netstandard2.0" exclude="" />
-    <file src="..\bin\$Configuration$\Microsoft.Actions.Actors.xml" target="lib\netstandard2.0" exclude="" />
+    <file src="..\..\..\bin\$Configuration$\Microsoft.Actions.Actors.dll" target="lib\netstandard2.0" exclude="" />
+    <file src="..\..\..\bin\$Configuration$\Microsoft.Actions.Actors.xml" target="lib\netstandard2.0" exclude="" />
   </files>
 </package>
