Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,7 @@ stages:
           nobuild: true
           versioningScheme: 'off'
       - task: CopyFiles@2
+        condition: ne(variables['Build.Reason'], 'PullRequest')
         inputs:
           SourceFolder: 'bin/$(Configuration)'
           Contents: '**'
