--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -144,11 +144,14 @@ stages:
           SessionTimeout: '20'
           MaxConcurrency: '50'
           MaxRetryAttempts: '5'
+      - task: CmdLine@2
+        inputs:
+          script: 'type bin\$(Configuration\*.md'
       - task: CopyFiles@2
         condition: ne(variables['Build.Reason'], 'PullRequest')
         inputs:
           SourceFolder: 'bin/$(Configuration)'
-          Contents: '**'
+          Contents: '*.dll,*.pdb,*.nupkg'
           TargetFolder: '$(Build.ArtifactStagingDirectory)'
       - task: PublishBuildArtifacts@1
         condition: ne(variables['Build.Reason'], 'PullRequest')
