--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,84 @@ stages:
           command: 'test'
           arguments: '--configuration $(Configuration)'
           projects: 'code.sln'
+      - task: EsrpCodeSigning@1
+        displayName: ESRP CodeSign
+        condition: and(eq(variables['Configuration'], 'release'), or(contains(variables['Build.SourceBranch'], 'refs/heads/master'), contains(variables['Build.SourceBranch'], 'refs/heads/release')))
+        inputs:
+          ConnectedServiceName: 'ActionsSigning'
+          FolderPath: 'bin/$(Configuration)'
+          Pattern: 'Microsoft.Actions*.dll'
+          UseMinimatch: true
+          signConfigType: 'inlineSignParams'
+          inlineOperation: |
+            [
+                {
+                    "keyCode": "$(ESRP_CODESIGN_KEYCODE)",
+                    "operationSetCode": "StrongNameSign",
+                    "parameters": [ ],
+                    "toolName": "sign",
+                    "toolVersion": "1.0"
+                },
+                {
+                    "keyCode": "$(ESRP_CODESIGN_KEYCODE)",
+                    "operationSetCode": "StrongNameVerify",
+                    "parameters": [ ],
+                    "toolName": "sign",
+                    "toolVersion": "1.0"
+                }
+            ]
+          SessionTimeout: '20'
+          MaxConcurrency: '50'
+          MaxRetryAttempts: '5'
+      - task: EsrpCodeSigning@1
+        displayName: ESRP Authenticode CodeSign'
+        condition: and(eq(variables['Configuration'], 'release'), or(contains(variables['Build.SourceBranch'], 'refs/heads/master'), contains(variables['Build.SourceBranch'], 'refs/heads/release')))
+        inputs:
+          ConnectedServiceName: 'ActionsSigning'
+          FolderPath: 'bin/$(Configuration)'
+          Pattern: 'Microsoft.Actions*.dll'
+          UseMinimatch: true
+          signConfigType: 'inlineSignParams'
+          inlineOperation: |
+            [
+              {
+                "keyCode": "$(ESRP_AUTHENTICODE_SIGN)",
+                "operationSetCode": "SigntoolSign",
+                "parameters": [{
+                        "parameterName": "OpusName",
+                        "parameterValue": "Microsoft"
+                    },
+                    {
+                        "parameterName": "OpusInfo",
+                        "parameterValue": "http://www.microsoft.com"
+                    },
+                    {
+                        "parameterName": "FileDigest",
+                        "parameterValue": "/fd \"SHA256\""
+                    },
+                    {
+                        "parameterName": "PageHash",
+                        "parameterValue": "/NPH"
+                    },
+                    {
+                        "parameterName": "TimeStamp",
+                        "parameterValue": "/tr \"http://rfc3161.gtm.corp.microsoft.com/TSS/HttpTspServer\" /td sha256"
+                    }
+                ],
+                "toolName": "sign",
+                "toolVersion": "1.0"
+              },
+              {
+                  "keyCode": "$(ESRP_AUTHENTICODE_SIGN)",
+                  "operationSetCode": "SigntoolVerify",
+                  "parameters": [],
+                  "toolName": "sign",
+                  "toolVersion": "1.0"
+              }
+            ]
+          SessionTimeout: '20'
+          MaxConcurrency: '50'
+          MaxRetryAttempts: '5'
       - task: DotNetCoreCLI@2
         displayName: 'Package nuget - $(Configuration)'
         inputs:
@@ -38,12 +116,47 @@ stages:
           packagesToPack: 'src/Microsoft.Actions.Actors/Microsoft.Actions.Actors.csproj'
           nobuild: true
           versioningScheme: 'off'
+      - task: EsrpCodeSigning@1
+        displayName: ESRP CodeSign - Nuget Package'
+        condition: and(eq(variables['Configuration'], 'release'), or(contains(variables['Build.SourceBranch'], 'refs/heads/master'), contains(variables['Build.SourceBranch'], 'refs/heads/release')))
+        inputs:
+          ConnectedServiceName: 'ActionsSigning'
+          FolderPath: '$(Build.ArtifactStagingDirectory)'
+          Pattern: 'Microsoft.Actions*.nupkg'
+          UseMinimatch: true
+          signConfigType: 'inlineSignParams'
+          inlineOperation: |
+            [
+                {
+                    "keyCode": "$(ESRP_CODESIGN_NUPKG)",
+                    "operationSetCode": "NuGetSign",
+                    "parameters": [ ],
+                    "toolName": "sign",
+                    "toolVersion": "1.0"
+                },
+                {
+                    "keyCode": "$(ESRP_CODESIGN_NUPKG)",
+                    "operationSetCode": "NuGetVerify",
+                    "parameters": [ ],
+                    "toolName": "sign",
+                    "toolVersion": "1.0"
+                }
+            ]
+          SessionTimeout: '20'
+          MaxConcurrency: '50'
+          MaxRetryAttempts: '5'
       - task: CopyFiles@2
         condition: ne(variables['Build.Reason'], 'PullRequest')
         inputs:
           SourceFolder: 'bin/$(Configuration)'
           Contents: '**'
           TargetFolder: '$(Build.ArtifactStagingDirectory)'
+      - task: CmdLine@2
+        displayName: "Show ESRP signing result"
+        condition: and(eq(variables['Configuration'], 'release'), or(contains(variables['Build.SourceBranch'], 'refs/heads/master'), contains(variables['Build.SourceBranch'], 'refs/heads/release')))
+        inputs:
+          script: 'type *.md'
+          workingDirectory: '$(Build.ArtifactStagingDirectory)'
       - task: PublishBuildArtifacts@1
         condition: ne(variables['Build.Reason'], 'PullRequest')
         inputs:
