--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ stages:
           arguments: '--configuration $(Configuration)'
           projects: 'code.sln'
       - task: EsrpCodeSigning@1
-        displayName: ESRP CodeSign
+        displayName: 'ESRP CodeSign'
         condition: and(eq(variables['Configuration'], 'release'), or(contains(variables['Build.SourceBranch'], 'refs/heads/master'), contains(variables['Build.SourceBranch'], 'refs/heads/release')))
         inputs:
           ConnectedServiceName: 'ActionsSigning'
@@ -60,7 +60,7 @@ stages:
           MaxConcurrency: '50'
           MaxRetryAttempts: '5'
       - task: EsrpCodeSigning@1
-        displayName: ESRP Authenticode CodeSign'
+        displayName: 'ESRP Authenticode CodeSign'
         condition: and(eq(variables['Configuration'], 'release'), or(contains(variables['Build.SourceBranch'], 'refs/heads/master'), contains(variables['Build.SourceBranch'], 'refs/heads/release')))
         inputs:
           ConnectedServiceName: 'ActionsSigning'
@@ -117,7 +117,7 @@ stages:
           nobuild: true
           versioningScheme: 'off'
       - task: EsrpCodeSigning@1
-        displayName: ESRP CodeSign - Nuget Package'
+        displayName: 'ESRP CodeSign - Nuget Package'
         condition: and(eq(variables['Configuration'], 'release'), or(contains(variables['Build.SourceBranch'], 'refs/heads/master'), contains(variables['Build.SourceBranch'], 'refs/heads/release')))
         inputs:
           ConnectedServiceName: 'ActionsSigning'
@@ -152,12 +152,22 @@ stages:
           Contents: '**'
           TargetFolder: '$(Build.ArtifactStagingDirectory)'
       - task: CmdLine@2
-        displayName: "Show ESRP signing result"
+        displayName: 'Show ESRP signing result'
         condition: and(eq(variables['Configuration'], 'release'), or(contains(variables['Build.SourceBranch'], 'refs/heads/master'), contains(variables['Build.SourceBranch'], 'refs/heads/release')))
         inputs:
           script: 'type *.md'
           workingDirectory: '$(Build.ArtifactStagingDirectory)'
+      - task: NuGetCommand@2
+        displayName: 'Publish nuget package to feed'
+        condition: and(eq(variables['Configuration'], 'release'), contains(variables['Build.SourceBranch'], 'refs/heads/release-'))
+        inputs:
+          command: 'push'
+          packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+          nuGetFeedType: 'internal'
+          publishVstsFeed: 'b3bbc81a-4160-49ac-9a5f-5a27eda7ce5b'
+          allowPackageConflicts: true
       - task: PublishBuildArtifacts@1
+        displayName: 'Publish binaries to artifact'
         condition: ne(variables['Build.Reason'], 'PullRequest')
         inputs:
           PathtoPublish: '$(Build.ArtifactStagingDirectory)'
