Add build tag for release-* branch build (#22)
* Remove useless ESRP signing result because the result is showing in esrp signing task
* Add build tag for release-* branch build
* release tag will allow preview kit automation build definition to pick the binaries from release-* branch

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -151,12 +151,6 @@ stages:
           SourceFolder: 'bin/$(Configuration)'
           Contents: '**'
           TargetFolder: '$(Build.ArtifactStagingDirectory)'
-      - task: CmdLine@2
-        displayName: 'Show ESRP signing result'
-        condition: and(eq(variables['Configuration'], 'release'), or(contains(variables['Build.SourceBranch'], 'refs/heads/master'), contains(variables['Build.SourceBranch'], 'refs/heads/release')))
-        inputs:
-          script: 'type *.md'
-          workingDirectory: '$(Build.ArtifactStagingDirectory)'
       - task: NuGetCommand@2
         displayName: 'Publish nuget package to feed'
         condition: and(eq(variables['Configuration'], 'release'), contains(variables['Build.SourceBranch'], 'refs/heads/release-'))
@@ -173,3 +167,9 @@ stages:
           PathtoPublish: '$(Build.ArtifactStagingDirectory)'
           ArtifactName: '$(Configuration)_drop'
           publishLocation: 'Container'
+      - task: CmdLine@2
+        displayName: 'Add release tag for release branch'
+        condition: and(eq(variables['Configuration'], 'release'), contains(variables['Build.SourceBranch'], 'refs/heads/release-'))
+        inputs:
+          script: 'echo "##vso[build.addbuildtag]release"'
+          workingDirectory: '$(Build.ArtifactStagingDirectory)'
