--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -109,11 +109,19 @@ stages:
           MaxConcurrency: '50'
           MaxRetryAttempts: '5'
       - task: DotNetCoreCLI@2
-        displayName: 'Package nuget - $(Configuration)'
+        displayName: 'Package Microsoft.Actions.Actors nuget - $(Configuration)'
         inputs:
           command: 'pack'
           arguments: '--configuration $(Configuration)'
           packagesToPack: 'src/Microsoft.Actions.Actors/Microsoft.Actions.Actors.csproj'
+          nobuild: true
+          versioningScheme: 'off'
+      - task: DotNetCoreCLI@2
+        displayName: 'Package Microsoft.Actions.Actors.AspNetCore nuget - $(Configuration)'
+        inputs:
+          command: 'pack'
+          arguments: '--configuration $(Configuration)'
+          packagesToPack: 'src/Microsoft.Actions.Actors.AspNetCore/Microsoft.Actions.Actors.AspNetCore.csproj'
           nobuild: true
           versioningScheme: 'off'
       - task: EsrpCodeSigning@1
