--- a/src/Microsoft.Actions.Actors.Client/Microsoft.Actions.Actors.Client.csproj
+++ b/src/Microsoft.Actions.Actors.Client/Microsoft.Actions.Actors.Client.csproj
@@ -3,21 +3,19 @@
   <Import Project="..\..\properties\actions_managed_stylecop.props" />
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>Microsoft.Actions.Actors.AspNetCore</AssemblyName>
+    <AssemblyName>Microsoft.Actions.Actors.Client</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
     <DocumentationFile>$(OutputPath)\$(AssemblyName).xml</DocumentationFile>
 
     <!-- Nuget package properties when packed using dotnet pack. -->
-    <NuspecFile>nuspec\Microsoft.Actions.Actors.AspNetCore.nuspec</NuspecFile>
+    <NuspecFile>nuspec\Microsoft.Actions.Actors.Client.nuspec</NuspecFile>
     <NuspecProperties>version=$(NupkgVersion);Configuration=$(Configuration)</NuspecProperties>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.2.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Microsoft.Actions.Actors.Runtime\Microsoft.Actions.Actors.Runtime.csproj" />
     <ProjectReference Include="..\Microsoft.Actions.Actors\Microsoft.Actions.Actors.csproj" />
   </ItemGroup>
   <ItemGroup>
