Updating to netcore3.0

--- a/test/Microsoft.Actions.Actors.Test/Microsoft.Actions.Actors.Test.csproj
+++ b/test/Microsoft.Actions.Actors.Test/Microsoft.Actions.Actors.Test.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\properties\actions_managed_netstandard.props" />
+  <Import Project="..\..\properties\actions_managed_stylecop.props" />
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
 
